--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-# OnchainKit API Key (required for Base Mini Apps)
-NEXT_PUBLIC_ONCHAINKIT_API_KEY=your_onchainkit_api_key_here
-
-# OpenAI API Key (for content generation)
+# OpenAI API Key for content generation
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Alternative: OpenRouter API Key
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# Supabase Configuration (for backend)
+# OnchainKit API Key for Base integration
+NEXT_PUBLIC_ONCHAINKIT_API_KEY=your_onchainkit_api_key_here
+
+# Supabase Configuration (for future backend integration)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Stripe Configuration (for payments)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+# Stripe Configuration (for subscription payments)
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
 
 # Farcaster/Neynar API (for social features)
 NEYNAR_API_KEY=your_neynar_api_key_here
